--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -3,3 +3,5 @@ it:
     hints:
       spree/product:
         catalog_mode: "Determina se per questo prodotto è abilitata la modalità catalogo (la vendita nello store online è disabilitata).<br/>Default: Non spuntato"
+      spree/store:
+        catalog_mode: "Determina se per questo negozio è abilitata la modalità catalogo (la vendita nello store online è disabilitata).<br/>Default: Non spuntato"
